--- a/_posts/Resume/2022-12-26-resume.md
+++ b/_posts/Resume/2022-12-26-resume.md
@@ -10,7 +10,7 @@ categories: resume
 
 <img src="/img/blogimg/Resume/green.jpeg" style="height:300px">
 
-김용록/金容綠
+김용록/金容綠/KIM YONGROK
 ===
 - [링키드인](https://www.linkedin.com/in/grokeen-b551a8283/)
 
@@ -58,7 +58,7 @@ categories: resume
         - 졸업 프로젝트 : 라즈베리파이를 이용한 운동자세 교정 스마트미러
             라즈베리파이
 
-        - 학점 : 3.52 / 132학점
+        - 학점 : 3.52 / 132학점 / 88.8%
             전공 학점 : 3.64 / 72학점
             학년 별 학점 : 3.33/3.42 3.33/3.25 3.7/3.67 3.7/4
             수강 과목(자바기초,자바응용 4.5/4.5)
@@ -75,7 +75,7 @@ categories: resume
         
 
 # 기타
-    - 2017.11.24 제12회 교내 KPU 소프트웨어 경진 대회 입상 , 한국공학대학교(한국산업기술대학교)
+    - 2017.11.24 제12회 교내 KPU 소프트웨어 경진 대회 입상, 한국공학대학교(한국산업기술대학교)
         군대 가기 전에 스스로의 위치를 확인하고자 치뤘던 시험으로, 운이 좋게 입상을 주셨습니다.
 
     - 2020.10.20 ~ 2021.12.21 한국공학대학교(한국산업기술대학교) 교내 수업 도우미
@@ -87,10 +87,11 @@ categories: resume
             라즈베리파이의 GPIO를 실습하다 보면 많은 하드웨어(물리)적 문제가 발생합니다. 첫 번째로 ` 라즈베리파이4 정석 `, 책을 이용하여 센서에 대한 정보를 탐색하였습니다. 두 번째, 구글링을 통하여 센서의 사용 가능 유무를 직접 코딩하며 실험해, 동작하는 센서를 구분하였습니다. 과전류에 따른 브레드 보드 및 센서의 손상 문제에 대해 사전에 방지하였습니다. 마지막으로 진도 문제를 해결하기 위해 뒤처진 학생들을 맡았으며, 학생들의 수업 참여율을 높였습니다. 그리하여 시간은 절약되고, 수업의 질을 높일 수 있었습니다. 결과적으로 기말고사 후 작년 대비 수업 만족도 12% 증가한 것을 확인하였으며, 교수님의 만족도 충족시킬 수 있었습니다.
 
     - 2021.06.14 ~ 2021.11.18 KIC 캠퍼스, 실무 프로젝트 기반 빅데이터 플랫폼 개발 및 분석 전문가 양성 과정 교육 이수
-            빅데이터 플랫폼 기반 자바&파이썬 개발자 양성과정으로, 웹 프로그래밍(java,jsp,spring)부터 시작하여, 머신러닝(python), 딥러닝(tensorflow)까지 전반적인 개발 환경을 습득하고, 현업기업 실무자 멘토링을 통한 프로젝트 중심으로, 실습 위주의 훈련 과정입니다. (840시간)
+            빅데이터 플랫폼 기반 자바&파이썬 개발자 양성 과정으로, 웹 프로그래밍(java,jsp,spring)부터 시작하여, 머신러닝(python), 딥러닝(tensorflow)까지 전반적인 개발 환경을 습득하고, 현업기업 실무자 멘토링을 통한 프로젝트 중심으로, 실습 위주의 훈련 과정입니다. (840시간)
                 
     - 2022.11.25 ADSP 자격증 취득 (한국데이터산업진흥원 ADsP-035002472)
     - 2023.09.01 정보처리기사 자격증 취득 (한국산업인력공단 23202190101X)
+    - 2023.09.06 2종 보통 + 2종 소형 취득 (서울특별시경창청장 11-16-617186-51)
     - 2023.10.06 빅데이터분석기사 필기 (한국데이터산업진흥원)
 
 
@@ -129,11 +130,15 @@ categories: resume
 
 
 # 취미/특기 그리고 가치관
-    - 취미 : 특정 브랜드의 중고 옷을 모으고 있습니다.
-    - 특기 : 특정 브랜드의 오래된 옷을 요즘 스타일로 트랜디하게 맞추어 입는 것이 제 특기입니다.
-     
+    - 취미 : 중고 옷이나 기기 저렴한 구매하고 있습니다.
+    - 특기 : 낡은 옷이나 기기를 고쳐서 사용하는 것이 특기입니다.
+    - 좌우명 :
+        모든 파도가 기회다. -마크 샌번
+        천사도 두려워하는 곳에 바보가 달려든다. -알렉산더 포프
+        수연낙명, 모든 인연은 운명이니 받아드려라
+        개관사정(蓋棺事定), 끝날 때까지 끝난게 아니다.
+
     - 가치관 :
-    
         chmod -R 751 김용록
 
         저의 가치관은 특이하게 리눅스 명령어인 chmod -R 751 입니다. chmod, 이 권한을 주는 명령어는 파일 소유자(7)는 "읽고/쓰고/실행" 모든 권한을 가지고 있고, 그룹(5)은 "읽고/실행"을 할 수 있으며, 그 밖에 사용자(1)는 그저 볼 수 만 있습니다.
@@ -142,6 +147,9 @@ categories: resume
 
         사람이기 때문에 컴퓨터 서버처럼 누구도 제 안에 들어 올 수 없습니다. 파일을 수정할 수 있는 건 결국 자신 뿐이라고 생각합니다. 인생도 마찬가지로 자기 생각을 실천하는 것은 어렵기 때문에, 그것을 개발하려는 열정과 노력이 없다면 작은 것 하나 바꿀 수 없습니다. 그래서 실천하고, 도전하며 행동하는 것이 다양한 경험을 얻을 수 있어 가장 중요하다고 생각합니다. 롯데정보통신은 새로운 사람들과 협력하며, 경험을 통해 새로운 저를 만들어 갈 수 있는 인생에 몇 없는 좋은 기회라고 생각합니다.
 
+
+# 성격의 장단점
+    
 
 
 
