--- a/_posts/Resume/2023-09-21-23년지원기업피드백.md
+++ b/_posts/Resume/2023-09-21-23년지원기업피드백.md
@@ -11,43 +11,67 @@ pin: false
 
 |No.|  날짜  | 기업 |규모| 직무 | 현황 | 탈락 분석 | 실행 계획|
 |:-----:|:-----:|:-----:|:-----:|:-----:|:-----:|:-----:|:-----:|
-|1|2023 08 17| [인사이드정보](https://www.jobkorea.co.kr/Recruit/GI_Read/42578660)|중소|검색/챗봇 개발자 |❌ 1차 면접 탈락|1차 면접에서 떨어진 거는 기술 부족이겠지, 상관과의 마찰에 대해서도 너무 솔직하게 말했음.|MSA가 무엇인지.|
-|2|2023 09 17| [SK 머터리얼즈]()|대| |❌ 서류 탈락|서류 제출 후 3일 만에 연락이 왔다. 이건 자기소개서 보다는 이력 문제인 듯 싶다. 부족한 부분은 아마도 영어 성적이나 학교가 문제 였겠지.|더 열심히 하자|
-|3|2023 09 18| [삼성 SDS]()|대||❌ 미지원|영어성적|Opic 준비가 필요해 보인다.|
-|4|2023 09 19| [LG CNS]()|대|DX Engineer SI/SM |❌ 서류 탈락|||
+|1|2023 08 17| [인사이드정보](https://www.jobkorea.co.kr/Recruit/GI_Read/42578660)|중소|검색/챗봇 개발자 | ❌👨‍👨‍👦 1차 면접 탈락|1차 면접에서 떨어진 거는 기술 부족이겠지, 상관과의 마찰에 대해서도 너무 솔직하게 말했음.|MSA가 무엇인지.|
+|2|2023 09 17| [SK 머터리얼즈]()|대| |❌📤 서류 탈락|서류 제출 후 3일 만에 연락이 왔다. 이건 자기소개서 보다는 이력 문제인 듯 싶다. 부족한 부분은 아마도 영어 성적이나 학교가 문제 였겠지.|더 열심히 하자|
+|3|2023 09 18| [삼성 SDS]()|대|| ❌ 미지원|영어성적|Opic 준비가 필요해 보인다.|
+|4|2023 09 19| [LG CNS]()|대|DX Engineer SI/SM | ❌📤 서류 탈락|||
 |5|2023 09 19| [라마](https://www.jobkorea.co.kr/Recruit/GI_Read/42661062?Oem_Code=C1)|스타트업| 데이터 엔지니어|서류제출|||
-|6|2023 09 19| [포스코 DX]()|대| |❌ 미지원|영어성적|Opic 준비가 필요해 보인다.|
-|7|2023 09 21| [천재교육](https://www.jobkorea.co.kr/Recruit/GI_Read/42685332?Oem_Code=C1&logpath=1&stext=자바&listno=13)|중견| Java 웹 개발자|서류제출|||
-|8|2023 09 27| [아프리카tv](https://www.jobkorea.co.kr/Recruit/GI_Read/42868987?Oem_Code=C1) |중견| Nood.js 웹 개발자|서류제출|||
-|9|2023 10 31| [플레닛헬스캐어](https://www.jobkorea.co.kr/Recruit/GI_Read/42863489?Oem_Code=C1)|중소| 데이터 엔지니어|세류제출|||
-|10|2023 10 03|[CJ올리브네트웍스](https://recruit.cj.net/recruit/ko/recruit/recruit/detail.fo?zz_jo_num=7647)|대|Java 개발자|서류제출|||
-|11|2023 10 03|[롯데정보통신](https://recruit.lotte.co.kr/apply/announcement/detail/21115485?compcd=?id=bookmark1000)|대| Java 개발자|❌ 서류 탈락|자소서?/학력?|10.11 탈락 소식을 들었는데 뭐 잘 못된 건지, 코테도 못 보고 떨어졌다고? 진짜 고려해봐야 한다. 아 가치관인가? 가치관에서 약간 좀 그랬나????|
-|12|2023 10 03|[한화시스템](https://www.hanwhain.com/web/apply/notification/view.do?rtSeq=11007)|대||❌ 미지원||일정 관리 부족|
-|13|2023 10 06|[DB금융투자](https://dbgroup.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=155109)|대|JAVA 개발|서류제출|||
-|14|2023 10 09|[NICE 그룹](https://nice.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=158255)|대|신입 Java 개발|❌ 서류 탁락|자소서?/학력?|10.18 여행 다녀오니까 떨어져 있네|
+|6|2023 09 19| [포스코 DX]()|대| | ❌ 미지원|영어성적|Opic 준비가 필요해 보인다.|
+|7|2023 09 21| [천재교육](https://www.jobkorea.co.kr/Recruit/GI_Read/42685332?Oem_Code=C1&logpath=1&stext=자바&listno=13)|중견| Java 웹 개발자|📤 서류제출|||
+|8|2023 09 27| [아프리카tv](https://www.jobkorea.co.kr/Recruit/GI_Read/42868987?Oem_Code=C1) |중견| Nood.js 웹 개발자| 📤 서류제출|||
+|9|2023 10 31| [플레닛헬스캐어](https://www.jobkorea.co.kr/Recruit/GI_Read/42863489?Oem_Code=C1)|중소| 데이터 엔지니어| 📤 서류제출|||
+|10|2023 10 03|[CJ올리브네트웍스](https://recruit.cj.net/recruit/ko/recruit/recruit/detail.fo?zz_jo_num=7647)|대|Java 개발자| 📤 서류제출|||
+|11|2023 10 03|[롯데정보통신](https://recruit.lotte.co.kr/apply/announcement/detail/21115485?compcd=?id=bookmark1000)|대| Java 개발자| ❌📤 서류 탈락|자소서?/학력?|10.11 탈락 소식을 들었는데 뭐 잘 못된 건지, 코테도 못 보고 떨어졌다고? 진짜 고려해봐야 한다. 아 가치관인가? 가치관에서 약간 좀 그랬나????|
+|12|2023 10 03|[한화시스템](https://www.hanwhain.com/web/apply/notification/view.do?rtSeq=11007)|대|| ❌ 미지원||일정 관리 부족|
+|13|2023 10 06|[DB금융투자](https://dbgroup.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=155109)|대|JAVA 개발| ❌📤 서류제출| 11.02 오타 문제일까? 영어 성적 문제일까? 아니면 학벌? | 오타는 수정했다.|
+|14|2023 10 09|[NICE 그룹](https://nice.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=158255)|대|신입 Java 개발| ❌📤 서류 탁락|자소서?/학력?|10.18 여행 다녀오니까 떨어져 있네|
 |15|2023 10 10| [KT DS](https://recruit.kt.com/careers/157809) | 대 | 엔지니어 개발자| ❌ 미지원 | | 하 시발 다 썼는데 몇 자 쓰라는 ㅈ같은 거 때문에 계속 수정하고 읽고 수정하고 읽고 제출이 정각인 줄 알고 딱 59분 되자마자 제출 눌렀는데 마감 떴네 ㅈ같게. 일부러 시간 맞춰서 밥 먹고 쉬다가 컨디션 회복하고 다시 수정했는데 750~800자 이게 생각보다 아주 ㅈ같네 |
 |16|2023 10 17| [넥슨](https://career.nexon.com/user/recruit/member/postDetail?joinCorp=NX&reNo=20230255) | 대 | 기술본부 | ❌ 미지원 |아버지랑 여행||
 |17|2023 10 17| [수협은행](https://shbank.incruit.com/hire/viewhire.asp?projectid=104) | 대 | IT 서비스 개발운영 | ❌ 미치원 |아버지랑 여행||
-|18 | 2023 10 28 | [엠클라우드브리지(주)](https://www.jobkorea.co.kr/Recruit/GI_Read/42860442?Oem_Code=C1&logpath=1&stext=BI&listno=1) | 스타트업 | BI 개발자 | 면접 |||
-|19|2023 11 07 | [(주)데이타솔루션](https://www.jobkorea.co.kr/Recruit/GI_Read/42829254?Oem_Code=C1&logpath=1&stext=BI&listno=5) |중견| 클라우드 아키텍트 |서류제출|||
-||| ||||||
-|21|2023 11 10 |[NEZOT㈜](https://www.jobkorea.co.kr/Recruit/GI_Read/43088314?Oem_Code=C1)  |외국계|웹개발자|서류제출|||
-|22|2023 10 22|[파수](https://recruit.fasoo.com/apply/233)|중견|백엔드|서류제출|||
+|18 | 2023 10 28 | [엠클라우드브리지(주)](https://www.jobkorea.co.kr/Recruit/GI_Read/42860442?Oem_Code=C1&logpath=1&stext=BI&listno=1) | 스타트업 | BI 개발자 | 👨‍👨‍👦 1차 면접 |||
+|19|2023 11 07 | [(주)데이타솔루션](https://www.jobkorea.co.kr/Recruit/GI_Read/42829254?Oem_Code=C1&logpath=1&stext=BI&listno=5) |중견| 클라우드 아키텍트 | 📤 서류제출|||
+|20|2023 11 10 |[NEZOT㈜](https://www.jobkorea.co.kr/Recruit/GI_Read/43088314?Oem_Code=C1)  |외국계|웹개발자| 📤 서류제출|||
+|21|2023 10 22|[파수](https://recruit.fasoo.com/apply/233)|중견|백엔드| ❌📤 서류탈락| 영어 성적일까? | 자소서는 어느정도 썼다고 생각한다. 맞춤법 검사는 하지 않았다. 해보니 틀린게 좀 있긴 하더라 고쳤다. |
+|22|2023 11 09|[(주)코비젼](https://www.jobkorea.co.kr/Recruit/GI_Read/43040731)  |벤처| JAVA 경력직 | 📤 서류제출|||
+|23|2023 10 24|[KTR과천](https://www.jobkorea.co.kr/User/PositionOffer/View?idx=55020315&mem_Type_Code=C&reload=n)  | 공 | ERP 경력 계약직 | ❌ 미지원 | 작년과 비슷할까봐 | 연락이 그 쪽에서 왔는데 연봉 4천 정도였다. 알바 삼아 넣으려다가 말았다.|
+|24|2023 11 01| [SBI저축은행](https://sbisb.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=153818) | 외감| 금융IT |  ❌🦾 AI역량검사 | 조샀다,,, 내 실수가 맞다. ||
+|25|2023 11 06| [우리FIS 아카데미](http://woorifisa.com) |대| 클라우드 개발자 교육 | ❌🤦‍♂️ KDT 불가 |||
+|26|2023 11 06| [IBK투자증권](https://jrs.jobkorea.co.kr/ibks/ibks23/Agi/Invite)|대| 디지털(DT) | 📤 서류제출 |||
+|27|2023 11 19 | [YIDO](https://www.jobkorea.co.kr/Recruit/GI_Read/43169916) |중견| IT 사업팀| 📤 서류제출|||
+|28|2023 11 12| [비즈테크아이](https://www.jobkorea.co.kr/Recruit/GI_Read/43065187?Oem_Code=C1) | 대 |JAVA Web|📤 서류제출|||
+|29|2023 11 20| [잡코리아](https://www.jobkorea.co.kr/Recruit/Booth_GI_Read/43220720?Oem_Code=C1&productType=VVIP&logpath=0) |중견|SAP|📤 서류제출|||
+|30|2023 11 03| [한국IT진흥](https://www.jobkorea.co.kr/Recruit/Booth_GI_Read/43113693?Oem_Code=C1&productType=TopClass&logpath=0) |중소| NS사업본부 IT보안 | ❌👨‍👨‍👦 1차 면접 미응시 |||
+|31|2023 11 05| [OK금융그룹](https://ok.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=160163) | 대 | IT개발 | 📤 서류제출 |||
+|32|2023 11 05|[JYP엔터테이먼트](https://recruit.jype.com/Recruit/Detail?Seq=707&Page=3&PageSize=12&RcTP=0&TempSaveST=False&ExpST=13&CampusST=0&State=0&SuppUseYN=False)  | 대 |백엔드 Django| 📤 서류제출 |||
+|33|2023 11 05| [아이디스](https://recruit.idis.co.kr:1007/_service/idis/apply_site/apply/recruit_default.asp) ||| ❌ 미지원 |||
+|34|2023 11 05| [자이C&A](https://xicna.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=160126) |||❌ 미지원 |||
+|35|2023 11 06 |[펜타시스템테크놀로지](https://www.jobkorea.co.kr/Recruit/GI_Read/43126987?Oem_Code=C1&sc=67)|중소|데이터엔지니어|📤 서류제출||
+|36|2023 11 06| [인천공항시설관리](https://airportfc.scout.co.kr/jobinfo/jobinfo_view.asp?ID=1022) |||❌ 미지원|||
+|37|2023 11 06| [아시아나IDT](https://asianaidt.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=160928) | 대 |JAVA 경력직 3년| 🦾 AI역량검사 |||
+|38|2023 11 06| [경동나비엔](https://recruit.kdfamily.co.kr/info/recruit-detail.do?idx=1110)|대|SAP,ERP|📤 서류제출|||
 
-|20| 2023 11 17  | [메가존클라우드](https://xmukacmt.ninehire.site/job_posting/Z0bpi6pd?lang=en) | 외국계 |솔루션 아키텍트 게이밍||||
-|23|2023 11 05|[JYP엔터테이먼트](https://recruit.jype.com/Recruit/Detail?Seq=707&Page=3&PageSize=12&RcTP=0&TempSaveST=False&ExpST=13&CampusST=0&State=0&SuppUseYN=False)  |대|백엔드 Django||||
-|24|2023 11 01| [SBI저축은행](https://sbisb.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=153818) ||금융IT||||
+||2023 11 09| [플레티어](https://career.plateer.com/2023) ||||||
+||2023 11 10|[도루코](https://dorco.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=161026) ||||||
+||2023 11 12| [SFA](https://recruit.sfa.co.kr/sfa/recruit?id=981&pg=1) ||||||
+||20223 11 12|[현대HDS](https://www.hyundaihds.co.kr/homepage/recruit/selectAdoptionDetail.do) ||||||
+|| 2023 11 17  | [메가존클라우드](https://xmukacmt.ninehire.site/job_posting/Z0bpi6pd?lang=en) | 외국계 |솔루션 아키텍트 게이밍||||
 
-|25|2023 11 09|[(주)코비젼](https://www.jobkorea.co.kr/Recruit/GI_Read/43040731)  |벤처| JAVA 경력직 |서류제출|||
-|26|2023 10 24|[KTR과천](https://www.jobkorea.co.kr/User/PositionOffer/View?idx=55020315&mem_Type_Code=C&reload=n)  | 공 | ERP 경력 계약직 | 웹 | ❌ 미지원 | 작년과 비슷할까봐 | 연락이 그 쪽에서 왔는데 연봉 4천 정도였다. 알바 삼아 넣으려다가 말았다.|
 
-|||  ||||||
-||| ||||||
+||2023 11 30| [티맥스소프트](https://tmaxsoft.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=142081) ||||||
+
 
 ||| ||||||
 ||| ||||||
 ||| ||||||
-
+||| ||||||
+||| ||||||
+||| ||||||
+||| ||||||
+||| ||||||
+||| ||||||
+||| ||||||
+||| ||||||
+||| ||||||
 
 |No.|  날짜  | 기업 |규모| 직무 | 현황 | 탈락 분석 | 실행 계획|
 
